--- a/client/sass/application.scss
+++ b/client/sass/application.scss
@@ -1,4 +1,13 @@
-html, body{
-  width: 100%;
-  height: 100%;
+@import './components/index';
+@import './_variables.scss';
+html, body {
+	margin : 0;
+}
+html{
+	position: relative;
+	min-height: 100%;
+}
+
+body {
+	margin: 0 0 $footer-height;
 }
