added posts into posts page

--- a/client/components/postMiniInfoComponent/post-mini-info.template.html
+++ b/client/components/postMiniInfoComponent/post-mini-info.template.html
@@ -1,1 +1,8 @@
-<div>post-mini-info</div>
+<div class="post-item">
+	<div class="header">
+		<span>{{postMiniInfo.title}}</span>
+	</div>
+	<div class="description">
+		<span>{{postMiniInfo.description}}</span>
+	</div>
+</div>
